Realized update and delete chat methods
